# ai-coding-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/agents/: analyzer.py  doc_agent.py  optimizer.py
src/logging/: logger.py
src/security/: sanitizer.py
src/state/: state.py
src/supervisor/: controller.py
src/tools/: formatter.py  linter.py
tests/: __init__.py  test_agents.py  test_state.py  test_supervisor.py
